// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=false\` because there is no active data integration 1`] = `
<InfobarCustomerInfo
  actions={
    Object {
      "generateAndSetWidgets": [MockFunction],
      "resetWidgets": [MockFunction],
      "setEditedWidgets": [MockFunction],
      "setEditionAsDirty": [MockFunction],
    }
  }
  customer={
    Immutable.Map {
      "id": 1,
      "name": "foo",
    }
  }
  dispatch={[Function]}
  displayTabs={true}
  hasIntegrations={false}
  isEditing={false}
  isRequired={false}
  sources={Immutable.Map {}}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  widgets={
    Immutable.Map {
      "currentContext": "ticket",
    }
  }
/>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type http 1`] = `
<InfobarCustomerInfo
  actions={
    Object {
      "generateAndSetWidgets": [MockFunction],
      "resetWidgets": [MockFunction],
      "setEditedWidgets": [MockFunction],
      "setEditionAsDirty": [MockFunction],
    }
  }
  customer={
    Immutable.Map {
      "id": 1,
      "name": "foo",
    }
  }
  dispatch={[Function]}
  displayTabs={true}
  hasIntegrations={true}
  isEditing={false}
  isRequired={false}
  sources={Immutable.Map {}}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  widgets={
    Immutable.Map {
      "currentContext": "ticket",
    }
  }
/>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type magento2 1`] = `
<InfobarCustomerInfo
  actions={
    Object {
      "generateAndSetWidgets": [MockFunction],
      "resetWidgets": [MockFunction],
      "setEditedWidgets": [MockFunction],
      "setEditionAsDirty": [MockFunction],
    }
  }
  customer={
    Immutable.Map {
      "id": 1,
      "name": "foo",
    }
  }
  dispatch={[Function]}
  displayTabs={true}
  hasIntegrations={true}
  isEditing={false}
  isRequired={false}
  sources={Immutable.Map {}}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  widgets={
    Immutable.Map {
      "currentContext": "ticket",
    }
  }
/>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type recharge 1`] = `
<InfobarCustomerInfo
  actions={
    Object {
      "generateAndSetWidgets": [MockFunction],
      "resetWidgets": [MockFunction],
      "setEditedWidgets": [MockFunction],
      "setEditionAsDirty": [MockFunction],
    }
  }
  customer={
    Immutable.Map {
      "id": 1,
      "name": "foo",
    }
  }
  dispatch={[Function]}
  displayTabs={true}
  hasIntegrations={true}
  isEditing={false}
  isRequired={false}
  sources={Immutable.Map {}}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  widgets={
    Immutable.Map {
      "currentContext": "ticket",
    }
  }
/>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type shopify 1`] = `
<InfobarCustomerInfo
  actions={
    Object {
      "generateAndSetWidgets": [MockFunction],
      "resetWidgets": [MockFunction],
      "setEditedWidgets": [MockFunction],
      "setEditionAsDirty": [MockFunction],
    }
  }
  customer={
    Immutable.Map {
      "id": 1,
      "name": "foo",
    }
  }
  dispatch={[Function]}
  displayTabs={true}
  hasIntegrations={true}
  isEditing={false}
  isRequired={false}
  sources={Immutable.Map {}}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  widgets={
    Immutable.Map {
      "currentContext": "ticket",
    }
  }
/>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type smile 1`] = `
<InfobarCustomerInfo
  actions={
    Object {
      "generateAndSetWidgets": [MockFunction],
      "resetWidgets": [MockFunction],
      "setEditedWidgets": [MockFunction],
      "setEditionAsDirty": [MockFunction],
    }
  }
  customer={
    Immutable.Map {
      "id": 1,
      "name": "foo",
    }
  }
  dispatch={[Function]}
  displayTabs={true}
  hasIntegrations={true}
  isEditing={false}
  isRequired={false}
  sources={Immutable.Map {}}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  widgets={
    Immutable.Map {
      "currentContext": "ticket",
    }
  }
/>
`;

exports[`<InfobarCustomerInfo/> should render basic customer info and a "generate widgets" button because customer data are loaded, the user is currently editing widgets, it is not currently dragging anything and widgets are currently empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
        url=""
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Connect(CustomerChannels)
        channels={Immutable.List []}
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Connect(CustomerChannels)>
    </div>
  </div>
  <GenerateButton
    setEditedWidgets={[MockFunction]}
    setEditionAsDirty={[MockFunction]}
    sources={
      Immutable.Map {
        "ticket": Immutable.Map {
          "customer": Immutable.Map {
            "integrations": Immutable.Map {
              "118": Immutable.Map {
                "foo": "bar",
              },
            },
          },
        },
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
        "_internal": Immutable.Map {
          "drag": Immutable.Map {
            "isDragging": false,
          },
          "editedItems": Immutable.List [
            Immutable.Map {
              "template": Immutable.Map {},
            },
          ],
          "hasFetchedWidgets": true,
        },
        "items": Immutable.List [],
      }
    }
  />
</div>
`;

exports[`<InfobarCustomerInfo/> should render basic customer info and empty widgets because customer data are loaded, the user is currently editing widgets and it is dragging a widget -- even though widgets are currently empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
        url=""
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Connect(CustomerChannels)
        channels={Immutable.List []}
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Connect(CustomerChannels)>
    </div>
  </div>
  <Connect(InfobarWidgets)
    context="ticket"
    displayTabs={true}
    editing={
      Object {
        "actions": Object {
          "generateAndSetWidgets": [MockFunction] {
            "calls": Array [
              Array [
                Immutable.Map {
                  "ticket": Immutable.Map {
                    "customer": Immutable.Map {
                      "integrations": Immutable.Map {
                        "118": Immutable.Map {
                          "foo": "bar",
                        },
                      },
                    },
                  },
                },
                "ticket",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "resetWidgets": [MockFunction],
          "setEditedWidgets": [MockFunction],
          "setEditionAsDirty": [MockFunction],
        },
        "canDrop": [Function],
        "isDragging": true,
        "isEditing": true,
        "state": Immutable.Map {
          "currentContext": "ticket",
          "_internal": Immutable.Map {
            "drag": Immutable.Map {
              "isDragging": true,
            },
            "editedItems": Immutable.List [
              Immutable.Map {
                "template": Immutable.Map {},
              },
            ],
            "hasFetchedWidgets": true,
          },
          "items": Immutable.List [],
        },
      }
    }
    source={
      Immutable.Map {
        "ticket": Immutable.Map {
          "customer": Immutable.Map {
            "integrations": Immutable.Map {
              "118": Immutable.Map {
                "foo": "bar",
              },
            },
          },
        },
      }
    }
    widgets={
      Immutable.List [
        Immutable.Map {
          "template": Immutable.Map {},
        },
      ]
    }
  />
</div>
`;

exports[`<InfobarCustomerInfo/> should render basic customer info and the suggestion to add integrations because there is no customer data and there is no data integrations configured for the account 1`] = `
<div
  className="widgetsList d-flex flex-column"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
        url=""
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Connect(CustomerChannels)
        channels={Immutable.List []}
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Connect(CustomerChannels)>
    </div>
  </div>
  <AddIntegrationSuggestion
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
  />
</div>
`;

exports[`<InfobarCustomerInfo/> should render only basic customer info because customer data are loaded, the user is not editing widgets and current widgets are empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
        url=""
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Connect(CustomerChannels)
        channels={Immutable.List []}
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Connect(CustomerChannels)>
    </div>
  </div>
</div>
`;

exports[`<InfobarCustomerInfo/> should render only basic customer info because there is no customer data and there is some data integrations configured for the account 1`] = `
<div
  className="widgetsList d-flex flex-column"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
        url=""
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Connect(CustomerChannels)
        channels={Immutable.List []}
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Connect(CustomerChannels)>
    </div>
  </div>
</div>
`;

exports[`<InfobarCustomerInfo/> sources render basic customer info and widgets because there is customer data, the user is not editing widgets and current widgets are not empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        size={50}
        style={Object {}}
        url=""
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Connect(CustomerChannels)
        channels={Immutable.List []}
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Connect(CustomerChannels)>
    </div>
  </div>
  <Connect(InfobarWidgets)
    context="ticket"
    displayTabs={true}
    source={
      Immutable.Map {
        "ticket": Immutable.Map {
          "customer": Immutable.Map {
            "integrations": Immutable.Map {
              "118": Immutable.Map {
                "foo": "bar",
              },
            },
          },
        },
      }
    }
    widgets={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "context": "ticket",
          "template": Immutable.Map {
            "foo": "bar",
          },
        },
      ]
    }
  />
</div>
`;
